# OpenAI-Multi-Agent

./: README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tasks.py
.github/workflows/: manual-invoke-fix.yml  manual-invoke-lint.yml  manual-invoke-test.yml  manual-invoke.yml  pipeline.yml
chat_gpt/: chat_Tech_decisions.md  chat_general_project_info.md  chat_gpt_Roadmap.md  chat_gpt_alfons.md  chat_gpt_general_prompts.md  chat_gpt_paul.md  chat_gpt_quentin.md  chat_gpt_ronnie.md  chat_gpt_sillas.md  chat_gpt_style_guide.md  chat_gpt_urs.md  chat_team_definition.md
src/: cli.py  main_menu.py
tests/: test_cli.py  test_main_menu.py
